More heuristics to enable the correct borders

* We need to follow the enabled borders of the associated plasmapopup,
  if exists
* we need to enable the border only if it touches the window borders
* when the item is on desktop, still enable both left and right

BUG:442929